--- a/public/popup.html
+++ b/public/popup.html
@@ -274,7 +274,8 @@
         border: 1px solid var(--result-border);
         color: var(--result-text);
         font-weight: 500;
-        min-height: 80px;
+        /* height: 100px; */
+        min-height: 120px;
       }
 
       .explain-box {
