--- a/public/popup.html
+++ b/public/popup.html
@@ -418,6 +418,28 @@
         max-height: 200px;
         overflow-y: auto;
       }
+
+      /* Explanation highlights */
+.fix-grammar {
+  color: #2563eb; /* Blue */
+  font-weight: 600;
+}
+
+.fix-spelling {
+  color: #16a34a; /* Green */
+  font-weight: 600;
+}
+
+.fix-style {
+  color: #9333ea; /* Purple */
+  font-weight: 600;
+}
+
+.fix-clarity {
+  color: #ea580c; /* Orange */
+  font-weight: 600;
+}
+
     </style>
   </head>
   <body>
